RESOLVED FIXED122098
[EFL] Fix incorrect click counting in EventSenderProxy
https://bugs.webkit.org/show_bug.cgi?id=122098
Summary [EFL] Fix incorrect click counting in EventSenderProxy
Krzysztof Wolanski
Reported 2013-09-30 04:18:56 PDT
Previously used two types of recording time, which conflicted with each other.
Attachments
proposed patch (2.41 KB, patch)
2013-09-30 04:21 PDT, Krzysztof Wolanski
no flags
Krzysztof Wolanski
Comment 1 2013-09-30 04:21:19 PDT
Created attachment 212978 [details] proposed patch
Gyuyoung Kim
Comment 2 2013-09-30 05:11:33 PDT
Comment on attachment 212978 [details] proposed patch LGTM
Grzegorz Czajkowski
Comment 3 2013-09-30 05:22:11 PDT
Is it ready to be in the trunk? If yes, please set cq?
WebKit Commit Bot
Comment 4 2013-09-30 06:14:12 PDT
Comment on attachment 212978 [details] proposed patch Clearing flags on attachment: 212978 Committed r156647: <http://trac.webkit.org/changeset/156647>
WebKit Commit Bot
Comment 5 2013-09-30 06:14:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.