[EFL] Fix incorrect click counting in EventSenderProxy https://bugs.webkit.org/show_bug.cgi?id=122098

Patch by Krzysztof Wolanski <k.wolanski@samsung.com> on 2013-09-30
Reviewed by Gyuyoung Kim.

Tools:

Previously used two types of recording time, which conflicted with each other.

* WebKitTestRunner/efl/EventSenderProxyEfl.cpp:
(WTR::EventSenderProxy::mouseUp):

LayoutTests:

After fixing EventSenderProxy extend-selection-after-double-click.html runs correctly.

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/140144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156647 268f45cc-cd09-0410-ab3c-d52691b4dbfc